YAL compiler test files/src/YalParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. YalParser.java */
import java.io.File;
import java.io.FileInputStream;
import java.io.IOException;
import java.util.ArrayList;


public class YalParser/*@bgen(jjtree)*/implements YalParserTreeConstants, YalParserConstants {/*@bgen(jjtree)*/
  protected JJTYalParserState jjtree = new JJTYalParserState();public static void main(String args []) throws ParseException, IOException
  {
  File folder = new File("src\u005c\u005cMyFirstYalExamples_err");

   ArrayList<String> listFileNames = listFilesForFolder(folder);
   for(int i = 0; i < listFileNames.size(); i++)
   {
    if(listFileNames.get(i).contains(".yal") )
    {
     System.out.println(listFileNames.get(i) + "###########\u005cn\u005cn");
     SimpleNode root = new YalParser(new FileInputStream("src\u005c\u005cMyFirstYalExamples_err\u005c\u005c" + listFileNames.get(i))).Module();
                root.dump("");

    }
   }

  }

   public static ArrayList<String> listFilesForFolder(final File folder)
 {
  ArrayList<String> list = new ArrayList<String>();
     for (final File fileEntry : folder.listFiles())
     {
         if (fileEntry.isDirectory())
             list.addAll(listFilesForFolder(fileEntry));
         else
          list.add(fileEntry.getName());
     }
  return list;
  }

//Non-terminals
/* Module ::= <MODULE> <ID> <LCHAVETA> ( Declaration )* ( Function )* <RCHAVETA> */
  final public SimpleNode Module() throws ParseException {
 /*@bgen(jjtree) MODULE */
  ASTMODULE jjtn000 = new ASTMODULE(JJTMODULE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      try {
        jj_consume_token(MODULE);
        t = jj_consume_token(ID);
      jjtn000.name = t.image;
        jj_consume_token(LCHAVETA);
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ID:
            ;
            break;
          default:
            jj_la1[0] = jj_gen;
            break label_1;
          }
          Declaration();
        }
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case FUNCTION:
            ;
            break;
          default:
            jj_la1[1] = jj_gen;
            break label_2;
          }
          Function();
        }
        jj_consume_token(RCHAVETA);
      } catch (ParseException e) {
    System.out.println(e.toString());
    Token t2;
    do
    {
      t2 = getNextToken();
    }
    while (t2.kind != RCHAVETA);
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

/* Declaration ::= 	( ArrayElement | ScalarElement )
					(
					  		<ASSIGN>
							( 	( "[" ArraySize "]" )
							| (<ADDSUB_OP> )? <INTEGER> )
															)? <PVIRG> */
  final public void Declaration() throws ParseException {
 /*@bgen(jjtree) DECLARATION */
  ASTDECLARATION jjtn000 = new ASTDECLARATION(JJTDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      try {
        if (jj_2_1(2)) {
          ArrayElement();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ID:
            ScalarElement();
            break;
          default:
            jj_la1[2] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ASSIGN:
          jj_consume_token(ASSIGN);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LPARRETO:
            jj_consume_token(LPARRETO);
            ArraySize();
            jj_consume_token(RPARRETO);
            break;
          case ADDSUB_OP:
          case INTEGER:
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case ADDSUB_OP:
              t = jj_consume_token(ADDSUB_OP);
      if (jjtn000.operator != "")
        jjtn000.operator += " " + t.image;
      else
        jjtn000.operator += t.image;
              break;
            default:
              jj_la1[3] = jj_gen;
              ;
            }
            t = jj_consume_token(INTEGER);
                jjtn000.integer = new Integer(t.image);
            break;
          default:
            jj_la1[4] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        default:
          jj_la1[5] = jj_gen;
          ;
        }
        jj_consume_token(PVIRG);
      } catch (ParseException e) {
    System.out.println(e.toString());
    Token t2;
    do
    {
      t2 = getNextToken();
    }
    while (t2.kind != PVIRG);
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/* Function ::= ( ( <FUNCTION> ( ArrayElement | ScalarElement ) <ASSIGN> <ID> <LPAR> (Varlist )? <RPAR> ) | ( <FUNCTION> <ID> <LPAR> ( Varlist )? <RPAR> ) )<LCHAVETA> Stmtlst <RCHAVETA> */
  final public void Function() throws ParseException {
 /*@bgen(jjtree) FUNCTION */
  ASTFUNCTION jjtn000 = new ASTFUNCTION(JJTFUNCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      try {
        if (jj_2_3(3)) {
          jj_consume_token(FUNCTION);
          if (jj_2_2(2)) {
            ArrayElement();
          } else {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case ID:
              ScalarElement();
              break;
            default:
              jj_la1[6] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
          jj_consume_token(ASSIGN);
          t = jj_consume_token(ID);
      if (jjtn000.id != "") jjtn000.id += " " + t.image;
      else jjtn000.id += t.image;
          jj_consume_token(LPAR);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ID:
            Varlist();
            break;
          default:
            jj_la1[7] = jj_gen;
            ;
          }
          jj_consume_token(RPAR);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case FUNCTION:
            jj_consume_token(FUNCTION);
            t = jj_consume_token(ID);
      if (jjtn000.id != "") jjtn000.id += " " + t.image;
      else jjtn000.id += t.image;
            jj_consume_token(LPAR);
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case ID:
              Varlist();
              break;
            default:
              jj_la1[8] = jj_gen;
              ;
            }
            jj_consume_token(RPAR);
            break;
          default:
            jj_la1[9] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        jj_consume_token(LCHAVETA);
        Stmtlst();
        jj_consume_token(RCHAVETA);
      } catch (ParseException e) {
    System.out.println(e.toString());
    Token t2;
    do
    {
      t2 = getNextToken();
    }
    while (t2.kind != RCHAVETA);
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/* Varlist ::= ( ArrayElement | ScalarElement ) ( <VIRG> ( ArrayElement | ScalarElement ))* */
  final public void Varlist() throws ParseException {
    if (jj_2_4(2)) {
      ArrayElement();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ScalarElement();
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRG:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_3;
      }
      jj_consume_token(VIRG);
      if (jj_2_5(2)) {
        ArrayElement();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          ScalarElement();
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

/* ArrayElement ::= <ID> "[" "]" */
  final public void ArrayElement() throws ParseException {
 /*@bgen(jjtree) ARRAYELEMENT */
  ASTARRAYELEMENT jjtn000 = new ASTARRAYELEMENT(JJTARRAYELEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      try {
        t = jj_consume_token(ID);
      if (jjtn000.id != "") jjtn000.id += " " + t.image;
      else jjtn000.id += t.image;
        jj_consume_token(LPARRETO);
        jj_consume_token(RPARRETO);
      } catch (ParseException e) {
    System.out.println(e.toString());
    Token t2;
    do
    {
      t2 = getNextToken();
    }
    while (t2.kind != RPARRETO);
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/*ScalarElement ::= <ID>*/
  final public void ScalarElement() throws ParseException {
 /*@bgen(jjtree) SCALARELEMENT */
  ASTSCALARELEMENT jjtn000 = new ASTSCALARELEMENT(JJTSCALARELEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      try {
        t = jj_consume_token(ID);
      if (jjtn000.value != "") jjtn000.value += " " + t.image;
      else jjtn000.value += t.image;
      } catch (ParseException e) {
    System.out.println(e.toString());
    Token t2;
    do
    {
      t2 = getNextToken();
    }
    while (t2.kind != ID);
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/* Stmtlst ::= ( Stmt )* */
  final public void Stmtlst() throws ParseException {
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WHILE:
      case IF:
      case ID:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_4;
      }
      Stmt();
    }
  }

/* Stmt ::= While | If | Assign | Call <PVIRG> */
  final public void Stmt() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WHILE:
        While();
        break;
      case IF:
        If();
        break;
      default:
        jj_la1[14] = jj_gen;
        if (jj_2_6(3)) {
          Assign();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ID:
            Call();
            jj_consume_token(PVIRG);
            break;
          default:
            jj_la1[15] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    } catch (ParseException e) {
    System.out.println(e.toString());
    Token t2;
    do
    {
      t2 = getNextToken();
    }
    while (t2.kind != PVIRG);
    }
  }

/* Assign ::= Lhs <ASSIGN> Rhs <PVIRG> */
  final public void Assign() throws ParseException {
    try {
      Lhs();
      jj_consume_token(ASSIGN);
      Rhs();
      jj_consume_token(PVIRG);
    } catch (ParseException e) {
    System.out.println(e.toString());
    Token t2;
    do
    {
      t2 = getNextToken();
    }
    while (t2.kind != PVIRG);
    }
  }

/* Lhs ::= ArrayAccess | ScalarAccess */
  final public void Lhs() throws ParseException {
    if (jj_2_7(2)) {
      ArrayAccess();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ScalarAccess();
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/* Rhs ::= ( Term ( ( <ARITH_OP> | <BITWISE_OP> | <ADDSUB_OP> ) Term )? ) | "[" ArraySize "]" */
  final public void Rhs() throws ParseException {
 /*@bgen(jjtree) RHS */
  ASTRHS jjtn000 = new ASTRHS(JJTRHS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ADDSUB_OP:
        case INTEGER:
        case ID:
          Term();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ADDSUB_OP:
          case ARITH_OP:
          case BITWISE_OP:
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case ARITH_OP:
              t = jj_consume_token(ARITH_OP);
      if (jjtn000.value != "") jjtn000.value += " " + t.image;
      else jjtn000.value += t.image;
              break;
            case BITWISE_OP:
              t = jj_consume_token(BITWISE_OP);
      if (jjtn000.value != "") jjtn000.value += " " + t.image;
      else jjtn000.value += t.image;
              break;
            case ADDSUB_OP:
              t = jj_consume_token(ADDSUB_OP);
      if (jjtn000.value != "") jjtn000.value += " " + t.image;
      else jjtn000.value += t.image;
              break;
            default:
              jj_la1[17] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
            Term();
            break;
          default:
            jj_la1[18] = jj_gen;
            ;
          }
          break;
        case LPARRETO:
          jj_consume_token(LPARRETO);
          ArraySize();
          jj_consume_token(RPARRETO);
          break;
        default:
          jj_la1[19] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (ParseException e) {
    System.out.println(e.toString());
    Token t2;
    do
    {
      t2 = getNextToken();
    }
    while (t2.kind != RPARRETO);
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/* ArraySize ::= ScalarAccess | <INTEGER> */
  final public void ArraySize() throws ParseException {
 /*@bgen(jjtree) ARRAYSIZE */
  ASTARRAYSIZE jjtn000 = new ASTARRAYSIZE(JJTARRAYSIZE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ScalarAccess();
        break;
      case INTEGER:
        t = jj_consume_token(INTEGER);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    if (jjtn000.value != "") jjtn000.value += " " + t.image;
    else jjtn000.value += t.image;
        break;
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/* Term ::= ( <ADDSUB_OP> )? ( <INTEGER> | Call | ArrayAccess | ScalarAccess ) */
  final public void Term() throws ParseException {
 /*@bgen(jjtree) TERM */
  ASTTERM jjtn000 = new ASTTERM(JJTTERM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADDSUB_OP:
        t = jj_consume_token(ADDSUB_OP);
      if (jjtn000.value != "") jjtn000.value += " " + t.image;
      else jjtn000.value += t.image;
        break;
      default:
        jj_la1[21] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER:
        t = jj_consume_token(INTEGER);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      if (jjtn000.value != "") jjtn000.value += " " + t.image;
      else jjtn000.value += t.image;
        break;
      default:
        jj_la1[22] = jj_gen;
        if (jj_2_8(3)) {
          Call();
        } else if (jj_2_9(2)) {
          ArrayAccess();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ID:
            ScalarAccess();
            break;
          default:
            jj_la1[23] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
